# api/openapi.json
@@ -49,6 +49,10 @@
             "format": "email",
             "description": "User's email address"
           },
+          "isAnonymous": {
+            "type": "boolean",
+            "description": "Whether the user is an anonymous user"
+          },
           "globalPermissions": {
             "type": "array",
             "items": {
